--- a/src/jss/src/assets/app.css
+++ b/src/jss/src/assets/app.css
@@ -180,3 +180,16 @@ button {
 .transparent {
   background: transparent !important;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sitelogo {
+  text-align: center;
+  padding-top: 3em;
+  padding-bottom: 6em;
+}
+
