--- a/src/jss/src/assets/app.css
+++ b/src/jss/src/assets/app.css
@@ -49,10 +49,6 @@ html {
   box-sizing: inherit;
 }
 
-header {
-
-}
-
 body {
   overflow-x: hidden;
   position: relative;
@@ -187,22 +183,24 @@ button {
 }
 .sitelogo {
   text-align: center;
-  padding-top: 3em;
-  padding-bottom: 6em;
+  padding-top: 1em;
+  padding-bottom: 2em;
 }
 
 /* leaderboard */
 .container {
   width: 680px;
-  margin-top: 1em;
+  padding: 0;
+  margin-top: 2em;
 }
 
 .leadheader {
   width: 100%;
   height: 70px;
-  background: rgba(0, 168, 232, 0.79);
+  background: #e01e25;
   text-align: center;
   border-radius: 5px 5px 0 0;
+  font-family: 'Faster One', cursive;
 }
 .leadheader h2 {
   margin: 0;
@@ -214,8 +212,11 @@ button {
   background: rgba(254, 254, 254, 0.9);
   width: 100%;
   margin-left: 0;
+  padding: 5px;
   text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  /* font-family: 'Press Start 2P', cursive; */
+  font-size: 10px;
 }
 .colheader h4 {
   font-size: 15px;
@@ -310,4 +311,8 @@ button {
     display: block;
     padding-top: 4px;
   }
+}
+
+.cgafont {
+  font-family: 'Press Start 2P';
 }
