--- a/src/jss/src/assets/app.css
+++ b/src/jss/src/assets/app.css
@@ -34,6 +34,10 @@ a[target='_blank']:after {
     margin-top: -190px;
 }
 
+html, body {
+    min-height: 100vh;
+}
+
 html {
     font-weight: normal;
     box-sizing: border-box;
